добавила активити для описания мероприятия (пока нет связи с бд)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".AddEventActivity"
             android:exported="true" />
         <activity
+            android:name=".AddDescriptionEventActivity"
+            android:exported="true" />
+        <activity
             android:name=".FindActivity"
             android:exported="true" />
         <activity
