--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,9 +43,6 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
-            android:name=".MessageAddEventActivity"
-            android:exported="true" />
-        <activity
             android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
@@ -53,7 +50,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> />
+        </activity>
     </application>
 
 </manifest>
