--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha05'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
 
 }
