--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name=".ParentNavigationActivity" />
         <activity android:name=".AboutDeveloperActivity" />
         <activity android:name=".InstructionsActivity" />
+        <activity android:name=".AddStudioActivity" />
     </application>
 
 </manifest>
